# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: 404.html  index.html  url.html  urls.html
